--- a/css/app.css
+++ b/css/app.css
@@ -168,9 +168,9 @@ p {
 }
 
 .caroussel {
-    background: #252525;
+    background: #11111111;
     width: 100%;
-    height: 500px;
+    height: 700px;
 }
 
 .footer {
@@ -236,6 +236,42 @@ a {
 .web {
     -webkit-animation: rcolor 10s cubic-bezier(0.6, 0.04, 0.98, 0.335) infinite;
     animation: rcolor 10s cubic-bezier(0.6, 0.04, 0.98, 0.335) infinite;
+}
+
+.caroussel h3 {
+    margin: 10px;
+    padding: 15px;
+    text-align: center;
+    font-size: 2em;
+    font-family: "Poppins";
+    font-weight: bolder;
+}
+
+.cards-container {
+    margin-top: 80px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    justify-items: center;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+}
+
+.card {
+    margin: 15px;
+    min-width: 300px;
+    height: 380px;
+    -webkit-box-shadow: 6px 6px 14px 0 rgba(230, 85, 85, 0.2), -4px -4px 8px 0 rgba(255, 255, 255, 0.55);
+    box-shadow: 6px 6px 14px 0 rgba(230, 85, 85, 0.2), -4px -4px 8px 0 rgba(255, 255, 255, 0.55);
+    border-radius: 20px;
+    padding: 4px 30px 20px;
+    min-height: 380px;
 }
 
 
