--- a/css/app.css
+++ b/css/app.css
@@ -167,18 +167,6 @@ p {
     opacity: 0.8;
 }
 
-.caroussel {
-    background: #11111111;
-    width: 100%;
-    height: 700px;
-}
-
-.footer {
-    position: relative;
-    padding: 50px 0;
-    height: 100px;
-}
-
 .info {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -189,7 +177,7 @@ p {
     flex-direction: row;
     -webkit-box-pack: start;
     -ms-flex-pack: start;
-    justify-content: flex-start;
+    justify-content: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
@@ -213,14 +201,6 @@ p {
 .info p:hover {
     text-decoration: underline;
     color: #e65555;
-}
-
-.motiv {
-    position: absolute;
-    right: 20px;
-    top: 20px;
-    font-size: 1.5em;
-    font-family: "Lobster";
 }
 
 a {
@@ -247,6 +227,33 @@ a {
     font-weight: bolder;
 }
 
+.caroussel::after {
+    content: "";
+    display: block;
+}
+
+.caroussel {
+    position: relative;
+    background: #11111111;
+    width: 100%;
+    height: 700px;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    padding: 50px 0;
+    z-index: 50;
+    width: 100%;
+    background: #000000;
+}
+
+.footer,
+.caroussel::after {
+    height: 100px;
+}
+
 .cards-container {
     margin-top: 80px;
     display: -webkit-box;
@@ -260,7 +267,8 @@ a {
     align-items: center;
     justify-items: center;
     -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    max-height: 400px;
 }
 
 .card {
@@ -282,6 +290,10 @@ a {
     -ms-transform: scale(1.2);
     transform: scale(1.2);
     z-index: 50;
+}
+
+.card:hover~.card {
+    transform: translateX(8%);
 }
 
 
@@ -397,5 +409,43 @@ animation
         -webkit-transform: translateY(0);
         transform: translateY(0);
         opacity: 1;
+    }
+}
+
+
+/**
+
+media query
+ 
+**/
+
+@media only screen and (max-width: 1412px) {
+    .info p {
+        padding: 15px;
+        text-overflow: ellipsis;
+    }
+    .day,
+    .slogant {
+        font-size: 1.8em;
+    }
+    .content {
+        font-size: 1em;
+    }
+}
+
+@media only screen and (max-width: 998px) {
+    .day,
+    .slogant {
+        font-size: 1.2em;
+    }
+    .content {
+        font-size: 0.8em;
+    }
+    .logo-img {
+        width: 100px;
+        height: 100px;
+    }
+    .name {
+        font-size: 0.8em;
     }
 }
