--- a/css/app.css
+++ b/css/app.css
@@ -13,8 +13,6 @@
 **/
 
 
-
-
 /**
 
 box-sixing
@@ -270,6 +268,27 @@ a {
     min-height: 380px;
     transition: all ease-in-out 1s;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    justify-items: center;
+    font-family: "Poppins";
+    font-size: 1.2em;
+}
+
+.card-desc {
+    padding: 10px;
+}
+
+.card a {
+    color: red;
+}
+
+.preview {
+    width: 250px;
+    height: 150px;
+    border: 2px solid white;
 }
 
 .card:hover {
